# shuzhi

./: Makefile  README.md  _shuzhi.fish  meson.build
cli/: _shuzhi.fish  _shuzhi.gjs  _shuzhi.js  _shuzhi.sh  gen-color.js  gen-icon.js  gen-icons.js
po/: LINGUAS  nl.po  zh_CN.po
res/data/: extension.gresource.xml.in  meson.build
res/data/scalable/status/: meson.build
res/icon/: meson.build
res/icons/: meson.build
res/schema/: schemas.gschema.xml  schemas.gschema.xml.in
res/schemas/: org.gnome.shell.extensions.shuzhi.gschema.xml
res/style/: stylesheet.scss
shuzhi@tuberry/: color.js  draw.js  extension.js  fields.js  metadata.json  mingju.json  prefs.js  shuzhi.sh  ui.js
shuzhi@tuberry/locale/: shuzhi.pot
shuzhi@tuberry/locale/nl/LC_MESSAGES/: gnome-shell-extension-shuzhi.po
shuzhi@tuberry/locale/zh_CN/LC_MESSAGES/: gnome-shell-extension-shuzhi.po  shuzhi.po
shuzhi@tuberry/schemas/: org.gnome.shell.extensions.shuzhi.gschema.xml
src/: color.js  const.js  draw.js  extension.js  prefs.js  shuzhi.sh
